<resources>
    <string name="app_name">Sonidos</string>
    <string name="btn_start">Inicio</string>
    <string name="msg_success">Secuencia Correcta</string>
    <string name="msg_fail">Secuencia Inorrecta</string>
    <string name="btn1">🐕</string>
    <string name="btn2">🐈</string>
    <string name="btn3">🐎</string>
    <string name="btn4">🐦</string>
    <string name="btn5">🦟</string>
    <string name="btn6">🦁</string>

    <!-- Strings para pantalla de inicio -->
    <string name="puntajesAltosBtn">Puntajes Altos</string>
    <string name="juegoBtn">Iniciar Juego</string>
    <string name="nombreJuego">Simón Dice</string>


    <!-- Strings para pantalla de puntajes altos -->
    <string name="tituloPuntajesAltos">Puntajes Altos</string>

    <string name="title_activity_high_scores">HighScores</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
