<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

    <Button
        android:id="@+id/button1"
        android:layout_width="143dp"
        android:layout_height="96dp"
        android:text="@string/btn1" />
    <Button
        android:id="@+id/button2"
        android:layout_width="143dp"
        android:layout_height="96dp"
        android:text="@string/btn2" />
    <Button
        android:id="@+id/button3"
        android:layout_width="143dp"
        android:layout_height="96dp"
        android:text="@string/btn3" />
    <Button
        android:id="@+id/button4"
        android:layout_width="143dp"
        android:layout_height="96dp"
        android:text="@string/btn4" />
    <Button
        android:id="@+id/button5"
        android:layout_width="143dp"
        android:layout_height="96dp"
        android:text="@string/btn5" />
    <Button
        android:id="@+id/button6"
        android:layout_width="143dp"
        android:layout_height="96dp"
        android:text="@string/btn6" />
</LinearLayout>
